# python-container-example

./: Dockerfile  Makefile  README.md  local.env  mypy.ini  pyproject.toml
examples/: embeddings-log.py  log.py
whylogs_config/: config.py  glove.6B.100d.txt  glove.6B.50d.txt  schema_bug.py
